<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homescreen">

    <LinearLayout
        android:layout_width="347dp"
        android:layout_height="589dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.739">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="346dp"
                android:layout_height="52dp"
                android:background="@color/colorPrimary"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.609"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="59dp"
                        android:layout_height="53dp"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0">

                        <ImageView
                            android:id="@+id/iv_home"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:onClick="irAhome"
                            app:srcCompat="@drawable/ic_home" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="60dp"
                        android:layout_height="52dp"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.255"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="1.0">

                        <ImageView
                            android:id="@+id/imageView8"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:onClick="irApowerOn"
                            app:srcCompat="@drawable/ic_power_on" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout2"
                        android:layout_width="60dp"
                        android:layout_height="52dp"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.531"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0">

                        <ImageView
                            android:id="@+id/imageView9"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:onClick="irApowerOff"
                            app:srcCompat="@drawable/ic_power_off" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="55dp"
                        android:layout_height="52dp"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.996"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0">

                        <ImageView
                            android:id="@+id/clklogout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:onClick="logout"
                            app:srcCompat="@drawable/ic_logout" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="56dp"
                        android:layout_height="51dp"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.762"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0">

                        <ImageView
                            android:id="@+id/imageView10"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:onClick="irABluethoot"
                            app:srcCompat="@drawable/ic_bluetooth" />
                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>


            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="110dp"
                android:layout_height="165dp"
                android:layout_weight="1"
                app:layout_constraintBottom_toBottomOf="@+id/linearLayout3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.082"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.143"
                app:srcCompat="@drawable/logodoorpet" />

            <TextView
                android:id="@+id/tv_bienvenido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_bienvenido"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/tv_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.771"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.725" />

            <TextView
                android:id="@+id/tv_inicio"
                android:layout_width="262dp"
                android:layout_height="233dp"
                android:layout_marginBottom="84dp"
                android:text="@string/tv_inicio"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/text_home" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="correorecuperado"
                app:layout_constraintBottom_toTopOf="@+id/btn_videotuto"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.461"
                app:layout_constraintStart_toEndOf="@+id/imageView12"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.814" />

            <Button
                android:id="@+id/btn_videotuto"
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:layout_marginTop="160dp"
                android:layout_marginEnd="52dp"
                android:layout_marginBottom="64dp"
                android:background="@drawable/btn_redondo"
                android:onClick="irAtuto"
                android:text="@string/btn_videotuto"
                android:textSize="10sp"
                app:layout_constraintBottom_toTopOf="@+id/textView11"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@drawable/ic_play" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="25dp"
                android:layout_height="29dp"
                android:layout_marginTop="24dp"
                app:layout_constraintBottom_toTopOf="@+id/textView11"
                app:layout_constraintEnd_toStartOf="@+id/btn_videotuto"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/imageView12"
                app:layout_constraintTop_toBottomOf="@+id/tv_email"
                app:layout_constraintVertical_bias="0.029"
                app:srcCompat="@drawable/ic_play" />

            <Button
                android:id="@+id/btn_historial"
                android:layout_width="130dp"
                android:layout_height="46dp"
                android:background="@drawable/btn_redondo"
                android:onClick="irHistorial"
                android:text="@string/btn_historial"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_inicio" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>